--- a/pages/19404.html
+++ b/pages/19404.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Clifford-Klein space form in nLab
+      spherical space form in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Clifford-Klein space form
+      spherical space form
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8484/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8488/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,10 +306,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
-
-<div class='rightHandSide'>
+    <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -596,19 +593,23 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>Clifford–Klein space form</strong> is a <a class='existingWikiWord' href='/nlab/show/double+coset'>double coset space</a> <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi><mo>\</mo><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>\Gamma \backslash G/H</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie group</a>, <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/closed+subspace'>closed</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, and <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Γ</mi></mrow><annotation encoding='application/x-tex'>\Gamma</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> that <a class='existingWikiWord' href='/nlab/show/action'>acts</a> <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuously</a> and <a class='existingWikiWord' href='/nlab/show/free+action'>freely</a> on the <a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a> <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo stretchy='false'>/</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>G/H</annotation></semantics></math>.</p>
+<p>A <em>spherical space form</em> is a <a class='existingWikiWord' href='/nlab/show/quotient+space'>quotient space</a> <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>S^n/G</annotation></semantics></math> of a round <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian</a> <a class='existingWikiWord' href='/nlab/show/sphere'>n-sphere</a> by a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete group</a> <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> which <a class='existingWikiWord' href='/nlab/show/action'>acts</a> <a class='existingWikiWord' href='/nlab/show/free+action'>freely</a> and <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuously</a>.</p>
 
-<p>The classical space forms are the <a class='existingWikiWord' href='/nlab/show/coset'>cosets</a> of the <a class='existingWikiWord' href='/nlab/show/sphere'>n-sphere</a> <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math> or the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> or the <a class='existingWikiWord' href='/nlab/show/hyperbolic+manifold'>hyperbolic space</a> <math class='maruku-mathml' display='inline' id='mathml_bb58641eb26f893eb1e56bc9cfa8b17adda828d6_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℍ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{H}^n</annotation></semantics></math> by <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroups</a> of their <a class='existingWikiWord' href='/nlab/show/isometry+group'>isometry group</a> <a class='existingWikiWord' href='/nlab/show/action'>acting</a> <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuously</a> (<a href='#Carmo92'>Carmo 92, chapt 8</a>).</p>
+<p>The spherical space forms are one of three classical examples of <em><a class='existingWikiWord' href='/nlab/show/Clifford-Klein+space+form'>Clifford-Klein space forms</a></em>.</p>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/properly+discontinuous+action'>properly discontinuous</a> <a class='existingWikiWord' href='/nlab/show/free+action'>free</a> <a class='existingWikiWord' href='/nlab/show/quotient+space'>quotients</a> of <a class='existingWikiWord' href='/nlab/show/sphere'>n-spheres</a> by <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete groups</a> of <a class='existingWikiWord' href='/nlab/show/isometry'>isometries</a> are also called <em><a class='existingWikiWord' href='/nlab/show/spherical+space+form'>spherical space forms</a></em>. The classification of these was raised as an open problem by <a href='#Killing1891'>Killing 1891</a> and a complete solution was finally compiled by (<a href='#Wolf74'>Wolf 74</a>). For more on this see at <em><a class='existingWikiWord' href='/nlab/show/group+actions+on+spheres'>group actions on n-spheres</a></em>.</p>
+<p>Their classification was raised as an open problem by <a href='#Killing1891'>Killing 1891</a> and a complete solution was finally compiled by (<a href='#Wolf74'>Wolf 74</a>) (reviewed for instance in <a href='#Gadhia07'>Gadhia 07, section 2.2</a>). A re-proof of the classification is claimed in (<a href='#Allock15'>Allock 15</a>).</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<p>For more on this see at <em><a class='existingWikiWord' href='/nlab/show/group+actions+on+spheres'>group actions on n-spheres</a></em>.</p>
+
+<p>\</p>
+
+<h2 id='examples_2'>Examples</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/locally+Klein+geometry'>locally Klein geometry</a></li>
+<li>The <a class='existingWikiWord' href='/nlab/show/near-horizon+geometry'>near horizon geometry</a> of smooth (i.e. non-<a class='existingWikiWord' href='/nlab/show/orbifold'>orbifold</a>) <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≥</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle></mrow><annotation encoding='application/x-tex'>\geq \tfrac{1}{2}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS</a> <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/M2-brane'>M2-brane</a>-solution of <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo>×</mo><mo stretchy='false'>(</mo><msup><mi>S</mi> <mn>7</mn></msup><mo stretchy='false'>/</mo><mi>G</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>AdS_4 \times (S^7/G)</annotation></semantics></math> of 4-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> with a 7-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> spherical space form <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>7</mn></msup><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>S^7/G</annotation></semantics></math>, for <math class='maruku-mathml' display='inline' id='mathml_55f7e70be472a0da00ce634634b4dd9d644ade5e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/classification+of+finite+rotation+groups'>finite subgroup of SU(2)</a> (<a href='#MFFGME09'>MFFGME 09</a>).</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -618,49 +619,49 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Wilhelm+Killing'>Wilhelm Killing</a>, <em>Ueber die Clifford-Klein’schen Raumformen</em>, Math. Ann. 39 (1891), 257–278</p>
 </li>
 
-<li>
-<p>Toshiyki Koyabashi, <em>Discontinuous Groups and Clifford—Klein Forms of Pseudo-Riemannian Homogeneous Manifolds</em>, (<a href='http://www.ms.u-tokyo.ac.jp/~toshi/texpdf/33-sum94lec-preprint.pdf'>pdf</a>)</p>
-</li>
-
 <li id='Wolf74'>
 <p><a class='existingWikiWord' href='/nlab/show/Joseph+Wolf'>Joseph Wolf</a>, <em>Spaces of constant curvature</em>, Publish or Perish, Boston, Third ed., 1974</p>
-</li>
-
-<li id='Carmo92'>
-<p>M. P. do Carmo, <em>Riemannian geometry</em>, Mathematics: Theory &amp; Applications, Birkhaeuser Boston Inc., Boston, MA, 1992, Translated from the second Portuguese edition by Francis Flaherty.</p>
 </li>
 
 <li>
 <p>Ian Hambleton, <em>Topological spherical space forms</em>, Handbook of Group Actions (Vol. II), ALM 32 (2014), 151-172. International Press, Beijing-Boston (<a href='https://arxiv.org/abs/1412.8187'>arXivL:1412.8187</a>)</p>
 </li>
+
+<li id='Gadhia07'>
+<p><a class='existingWikiWord' href='/nlab/show/Sunil+Gadhia'>Sunil Gadhia</a>, <em>Supersymmetric quotients of M-theory and supergravity backgrounds</em>, PhD thesis, School of Mathematics, University of Edinburgh, 2007 (<a href='http://inspirehep.net/record/1393845/'>spire:1393845</a>)</p>
+</li>
+
+<li id='MFFGME09'>
+<p>Paul de Medeiros, <a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>José Figueroa-O&#39;Farrill</a>, Sunil Gadhia, <a class='existingWikiWord' href='/nlab/show/Elena+M%C3%A9ndez-Escobar'>Elena Méndez-Escobar</a>, <em>Half-BPS quotients in M-theory: ADE with a twist</em>, JHEP 0910:038,2009 (<a href='http://arxiv.org/abs/0909.0163'>arXiv:0909.0163</a>, <a href='http://www.maths.ed.ac.uk/~jmf/CV/Seminars/YRM2010.pdf'>pdf slides</a>)</p>
+</li>
+
+<li id='Allock15'>
+<p>Daniel Allcock, <em>Spherical space forms revisited</em> (<a href='https://arxiv.org/abs/1509.00906'>arXiv:1509.00906</a>)</p>
+</li>
 </ul>
 
 <p>
-</p>
-
-<p>
- 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 24, 2018 at 11:13:50.
-  See the <a href="https://ncatlab.org/nlab/history/Clifford-Klein space form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on April 24, 2018 at 11:18:33.
+  See the <a href="https://ncatlab.org/nlab/history/spherical space form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Clifford-Klein+space+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Clifford-Klein+space+form/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Clifford-Klein+space+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Clifford-Klein+space+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Clifford-Klein space form/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/spherical+space+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/spherical space form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Clifford-Klein+space+form" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/spherical+space+form" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Clifford-Klein+space+form" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/spherical+space+form" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Clifford-Klein+space+form" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/spherical+space+form" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
