--- a/pages/6843.html
+++ b/pages/6843.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,6 +310,98 @@ margin-left: 0em;
 <li><a href='http://www.maths.ed.ac.uk/~jmf/'>webpage</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_a352348ef53ad279d5a753cafab7c928eda90a6d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/exceptional+Lie+algebra'>exceptional Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/exceptional+Lie+group'>exceptional Lie group</a>, <a class='existingWikiWord' href='/nlab/show/F4'>F4</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin+representation'>spin representation</a>, <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana spinor</a>, <a class='existingWikiWord' href='/nlab/show/charge+conjugation+matrix'>charge conjugation matrix</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M2-brane'>M2-brane</a>, <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a>, <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spherical+space+form'>spherical space form</a>, <a class='existingWikiWord' href='/nlab/show/group+actions+on+spheres'>group action on n-spheres</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/4-sphere'>4-sphere</a>, <a class='existingWikiWord' href='/nlab/show/7-sphere'>7-sphere</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ADE+classification'>ADE classification</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BLG+model'>BLG model</a>, <a class='existingWikiWord' href='/nlab/show/ABJM+theory'>ABJM model</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freund-Rubin+compactification'>Freund-Rubin compactification</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/superisometry+group'>superisometry group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symplectic+reduction'>symplectic reduction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/n-Lie+algebra'>n-Lie algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-infinity algebra</a>, <a class='existingWikiWord' href='/nlab/show/L-infinity+algebras+in+physics'>L-infinity algebras in physics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Clifford+algebra'>Clifford algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spinning+string'>spinning string</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/electric-magnetic+duality'>electric-magnetic duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a>, <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/moment+map'>moment map</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super-Cartan+geometry'>super Cartan geometry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+fundamental+super+p-branes'>geometry of physics -- fundamental super p-branes</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
@@ -322,19 +412,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 10, 2015 09:37:25 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  <p>
+  Last revised on April 24, 2018 at 13:55:59.
+  See the <a href="https://ncatlab.org/nlab/history/José Figueroa-O’Farrill" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jos%C3%A9+Figueroa-O%E2%80%99Farrill/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jos%C3%A9+Figueroa-O%E2%80%99Farrill/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/José Figueroa-O’Farrill/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" id="view_source" rel="nofollow">Source</a>
