--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,18 +305,36 @@ margin-left: 0em;
 
 <div id="revision">
     <p>Test</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_80d4b5c7af6669f34884ed873ac8ef9872794f76_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd></mtd> <mtd><msub><mi>e</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>3</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>5</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>6</mn></msub><msub><mi>e</mi> <mn>7</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>2</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>e</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>3</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>4</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>5</mn></msub><msub><mi>e</mi> <mn>2</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>3</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>e</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>3</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>4</mn></msub><msub><mi>e</mi> <mn>3</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>6</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><msub><mi>e</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>3</mn></msub><msub><mi>e</mi> <mn>6</mn></msub></mrow><mo>⏟</mo></munder><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>e</mi> <mn>4</mn></msub></mrow></munder><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>e</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><munder><munder><mrow><msub><mi>e</mi> <mn>2</mn></msub><msub><mi>e</mi> <mn>4</mn></msub></mrow><mo>⏟</mo></munder><mrow><msub><mi>e</mi> <mn>1</mn></msub></mrow></munder><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><msub><mi>e</mi> <mn>1</mn></msub><msub><mi>e</mi> <mn>1</mn></msub></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+   &amp; e_1 (e_2 (e_3 (e_4 (e_5 (\underset{e_2}{\underbrace{e_6 e_7}})))))
+   \\
+   &amp; = e_1 (e_2 (e_3 (e_4 (\underset{e_3}{\underbrace{e_5 e_2}} ))))
+   \\
+   &amp; = e_1 (e_2 (e_3 (\underset{-e_6}{\underbrace{e_4 e_3}})))
+   \\
+   &amp; = - e_1 (e_2 (\underset{- e_4}{\underbrace{e_3 e_6}}))
+   \\
+   &amp; = e_1 (\underset{e_1}{\underbrace{e_2 e_4}})
+   \\
+   &amp; = e_1 e_1
+   \\
+   &amp; = -1
+  \end{aligned}
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 24, 2018 at 15:21:21.
+  Last revised on April 25, 2018 at 01:53:13.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1490" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1490 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1491" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1491 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
